[package]
name = "blps"
version = "0.1.0"
authors = ["rkr35 <rkr35@dragons.drexel.edu>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
debug = true
incremental = false
lto = "fat"
panic = "abort"

[features]
dump = ["heck"]
hook = ["detours-sys"]

[dependencies]
detours-sys = { git = "https://github.com/rkr35/detours", optional = true }
heck = { version = "0.3", optional = true }
log = "0.4"
simplelog = "0.8"
thiserror = "1.0"
winapi = { version = "0.3", features = [
    "consoleapi",
    "libloaderapi",
    "minwindef",
    "processthreadsapi",
    "psapi",
    "synchapi",
    "wincon",
    "winnt",
]}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html